@@ -71,6 +71,10 @@ Zope Changes
 
     Features added
 
+      - Added LAZY_FILE_LOADING constant to PageTemplateFile. When set to True
+        Page Template files aren't lo aded and parsed on Zope startup anymore,
+        but on first access instead.
+
       - Testing.ZopeTestCase: Introduced a "ZopeLite" test layer, making it
         possible to mix ZTC and non-ZTC tests much more freely.
 
